<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>picknik_ament_copyright</name>
  <version>0.0.2</version>
  <description>
    Check PickNik-specific copyright headers.
  </description>
  <maintainer email="joseph.schornak@picknik.ai">Joe Schornak</maintainer>
  <license>BSD</license>

  <exec_depend>ament_copyright</exec_depend>

  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
